# iu-alumni-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.cron.yml  docker-compose.yml  docker-stack.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 18e160caec1f_add_settings_table.py  201cabf06628_add_tg_alias_and_avatar_to_users.py  4932e137589a_create_alumni_and_admin_tables.py  5ccde921ec36_make_cost_float.py  8f2a3b1c5d6e_add_telegram_bot_tables.py  9e14c7999275_add_approve_field_to_events.py  a1b2c3d4e5f6_add_login_codes_and_password_reset_tokens.py  a2b3c4d5e6f7_add_performance_indexes.py  a3b4c5d6e7f8_auth_refactor.py  abbdcb5d6cb9_merge_heads.py  add_allowed_emails_table.py  b1c2d3e4f5a6_add_trgm_and_location_indexes.py  b8cc16a01785_add_email_verifications_table.py  c36707b4309e_add_events_table.py  ce16dfe6b981_add_events_table.py  d56a7033fce8_add_cities_table.py  daa05a12a026_update_graduation_year.py  f1e2d3c4b5a6_merge_all_heads.py
app/: main.py
app/api/routes/admin/: __init__.py  approve_event.py  ban.py  decline_event.py  email_diagnostic.py  list_all_events.py  list_banned.py  list_users.py  settings.py  test_email.py  unapprove_event.py  unban.py  unverify_user.py  upload_allowed_emails.py  verify_user.py
app/api/routes/authentication/: __init__.py  add_admin.py  alumni_signup.py  login.py  login_otp.py  login_telegram_otp.py  login_verify.py  password_reset_confirm.py  password_reset_request.py  register.py  request_manual_verification.py  resend_verification.py  telegram_verify.py  verification.py  verify.py
app/api/routes/cities/: __init__.py  search_cities.py
app/api/routes/events/: __init__.py  create_event.py  delete_event.py  event_add_participant.py  event_remove_participant.py  get_cover.py  get_event.py  list_event_participants.py  list_events.py  list_owner_events.py  list_participant_events.py  update_event.py
app/api/routes/profile/: __init__.py  get_other_profile.py  get_profiles.py  map.py  profile.py
app/api/routes/telegram/: __init__.py  feedback.py  notifications.py  webhook.py
app/api/routes/utils/: notifications.py
app/core/: database.py  logging.py  security.py
app/models/: allowed_emails.py  cities.py  email_verification.py  enums.py  events.py  login_code.py  password_reset_token.py  settings.py  telegram.py  telegram_verify_token.py  users.py
app/schemas/: allowed_emails.py  auth.py  city.py  event.py  pagination.py  profile.py  settings.py  telegram.py  user.py  verification.py
app/services/: email_hash_service.py  email_service.py  feedback_service.py  notification_service.py  settings.py  telegram_bot.py  telegram_polling.py  user_import.py  verification_service.py
app/templates/email/: _base.html  login_code.html  manual_verification.html  password_reset.html  telegram_verification.html  verification.html  verification_link.html  verification_success.html
cron/: crontab
docs/: auth-otp-password-reset.md
front/: README.md  README_NEW.md  generate-excel.py  index.html  script.js  server.py  styles.css
scripts/: backup_database.sh  send_event_reminders.py
tests/: conftest.py
tests/api/: test_events.py  test_login.py
